--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,21 @@
 .banner-text{
     font-size: 70px;
     font-weight: 700;
+    padding: 0 0 200px 0;
 }
-#banner-items{
-    height: 84vh;
-    min-height: 300px;
+.banner-items{
+    height: 45rem;
+    background-color: black;
+    position: relative;
+    
+}
+.overlay-img{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-position: center;
+    background-size: cover;
+    opacity: .4;
 }
